package com.university.finance.model;


public enum TypeTransaction {
    DEPOSIT,
    WITHDRAWAL,
    TRANSFER_IN,
    TRANSFER_OUT
}
